# self-supervised-dermatology

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  common.mk  docker-compose.base.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: knn_figs.py  train_byol.py  train_colorme.py  train_dino.py  train_ibot.py  train_mae.py  train_simclr.py
src/trainers/: old_base_trainer.py
src/utils/: memory.py
tests/integration/downstream/: test_fitzpatrick17k.py  test_ham10000.py  test_isic_task1.py  test_pad_ufes_20_dataset.py
tests/integration/training/: test_train_byol.py  test_train_colorme.py  test_train_dino.py  test_train_ibot.py  test_train_simclr.py
tests/test_utils/configs/: byol.yaml  colorme.yaml  dino.yaml  ibot.yaml  simclr.yaml
